--- a/Templates/blogpost.html
+++ b/Templates/blogpost.html
@@ -32,6 +32,7 @@
             <center>
                 <input type="submit" name="submit" value="login"/>
             </center>
+            <input type="hidden" name="csrf" value="{{csrf_token}}">
         </form>
         <br/>
         <center>
